# AI-Assistant-Platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  chat.py  documents.py  health.py  providers.py  sessions.py
backend/app/api/v1/schemas/: auth.py  chat.py  document.py  providers.py  session.py
backend/app/core/: __init__.py  exceptions.py  middleware.py  oauth.py  security.py
backend/app/db/: database.py  redis.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  chat.py  document.py  feedback.py  session.py  user.py
backend/app/services/: advanced_rag_service.py  agent_service.py  analytics_service.py  auth_service.py  claude_service.py  cost_service.py  deepseek_service.py  document_service.py  gemini_service.py  groq_service.py  llm_router.py  llm_service.py  memory_service.py  mistral_service.py  ollama_service.py  openai_service.py  rag_service.py  together_service.py
backend/app/services/providers/: __init__.py  base.py  claude_provider.py  factory.py  openai_compatible.py  registry.py
backend/app/utils/: helpers.py  logger.py  token_counter.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_health.py  test_sessions.py
backend/tests/unit/: test_cost_service.py  test_helpers.py  test_llm_router.py  test_security.py  test_token_counter.py
(+44 files in other folders)
